# zephyr

./: README.md
BTtest/: stm32_min_dev_blue.overlay
BTtest/src/: 7.30.code-workspace  main.c
app/: CMakeLists.txt  prj.conf  stm32_min_dev_blue.overlay
app/boards/arm/stm32f103CBT6/: Kconfig.board  Kconfig.defconfig  board.cmake  pinmux.c  stm32f103CBT6.dts  stm32f103CBT6.yaml  stm32f103CBT6_defconfig
app/src/: 7.30.code-workspace  BT.c  BT.h  function.c  function.h  main.c  main.h
pwmtest/src/: main.c
standbytest/: stm32_min_dev_blue.overlay
standbytest/src/: 7.30.code-workspace  main.c
swj/: CMakeLists.txt  prj.conf
swj/boards/arm/stm32f030K6T6/: Kconfig.board  Kconfig.defconfig  board.cmake  pinmux.c  stm32f030K6T6.dts  stm32f030K6T6.yaml  stm32f030K6T6_defconfig
swj/boards/arm/stm32f030K6T6/support/: openocd.cfg
swj/src/: BT.c  BT.h  function.c  main.c  pwm.py
voltagetest/: stm32_min_dev_blue.overlay
voltagetest/src/: main.c
